<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  
  <groupId>fr.fidtec</groupId>
  <artifactId>Snippets_java_1x</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>17</maven.compiler.source>
      <maven.compiler.target>17</maven.compiler.target>
      <java.version>17</java.version>
      <junit-jupiter.version>5.11.0</junit-jupiter.version>
      <junit.version>4.12</junit.version>
      <log4j2.version>2.24.1</log4j2.version>
      <lombok.version>1.18.34</lombok.version>
      <mokito.version>5.14.1</mokito.version>
      <slf4j.version>1.7.36</slf4j.version>
  </properties>

    <!-- pour utiliser le Nexus interne -->
  <repositories>
   
 	<repository>
  		<id>nexus_repo_releases</id>
  		<name>Mon repo Nexus Releases</name>
  		<url>http://nexus.fidtec.fr:8081/repository/maven-releases</url>
 	</repository>

 	<repository>
  		<id>nexus_repo_snapshots</id>
  		<name>Mon Repo Nexus Snapshots</name>
  		<url>http://nexus.fidtec.fr:8081/repository/maven-snapshots</url>
 	</repository>

  </repositories>

    <dependencyManagement>
        <dependencies>

            <!-- tire log4j-api -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j2.version}</version>
            </dependency>

            <!--  The Log4j 2 SLF4J Binding allows applications coded to the SLF4J API to use Log4j 2 as the implementation.
	              https://logging.apache.org/log4j/2.x/log4j-slf4j-impl/index.html -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j2.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mokito.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mokito.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
 <modules>
    <module>/POC_AspectJ</module>
    <module>/POC_CompletableFuture</module>
    <module>/POC_First_Java_1x</module>
    <module>/POC_Interceptor</module>
    <module>/POC_Junit5</module>
    <module>/POC_Lombok</module>
    <module>POC_Mapper</module>
    <module>/POC_MongoDB</module>   
  </modules>

</project>